[gd_scene load_steps=6 format=3 uid="uid://brrdps6u3goyu"]

[ext_resource type="Script" path="res://ui/level_completed_ui/level_completed_ui.gd" id="1_uc5cw"]
[ext_resource type="FontFile" uid="uid://by2q5kt44784k" path="res://assets/font/Minecraftia-Regular.ttf" id="2_i13xp"]
[ext_resource type="PackedScene" uid="uid://bj7g2x35tw2fe" path="res://scenes/cutscenes/game_over.tscn" id="3_28una"]

[sub_resource type="LabelSettings" id="LabelSettings_43ygm"]
font = ExtResource("2_i13xp")
font_size = 51
font_color = Color(0, 0.501961, 0.686275, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ebirs"]
font = ExtResource("2_i13xp")
font_size = 30
font_color = Color(0, 0.5, 0.683594, 1)

[node name="level_completed_ui" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_uc5cw")

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "LEVEL CLEARED"
label_settings = SubResource("LabelSettings_43ygm")

[node name="SubTitle" type="Label" parent="TitleLabel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 33.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS ENTER TO CONTINUE"
label_settings = SubResource("LabelSettings_ebirs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextGameOver" parent="." instance=ExtResource("3_28una")]
